[package]
name = "sqd-yellowstone-geyser-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bs58 = "0.5.1"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
jsonrpsee = { version = "0.25.1", features = ["server", "tracing"] }
lexical-core = { version = "1.0.5", default-features = false, features = ["write", "write-integers", "write-floats"] }
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.219"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.0", features = ["tls-native-roots", "tls-ring"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.0"

